syntax = "proto3";

package ledstripinterface;
import "proto/frame.proto";

message Conveyor {
    Strip strip = 1;
    repeated ShiftRegister shift_registers = 2;
}

message Strip {
    float length_meters = 1; // length of the LED strip from first to last LED
    uint32 led_count = 2; // number of LEDs installed over length
    float chain_element_size_mm = 3;
}

message ShiftRegister {
    repeated Color vials = 1;
    int32 offset = 2; // relative to first LED
    int32 stride = 3; // extra distance between vials, usually equals shift register count -1
}
